[package]
name = "tauri-appwx-markdown2html"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appwx_markdown2html_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13.0"
css-inline = "0.18.0"
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
regex = "1"
once_cell = "1.19.0"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
